* Added MysqlAdapter#create_connection and MysqlAdapter#close_connection concrete methods
* Made SqlAdapter#connection a concrete method (instead of abstract), with support for single_threaded operation
* Database#setup now takes a Hash of options instead of a block-initializer
* Validation chaining should work for all association types
* Save chaining should work for has_many associations
* Added benchmarks for in-session performance to performance.rb
* Removed block conditions; They're slower and don't offer any real advantages
* Removed DeleteCommand
* Removed SaveCommand
* Removed TableExistsCommand
* Session renamed to Context
* Most command implementations moved to methods in SqlAdapter
* Removed UnitOfWork module, instead moving a slightly refactored implementation into Base

-- 0.2.1
* Added :float column support
* Added association proxies: ie: Zoo.first.exhibits.animals
* Columns stored in SortedSet
* Swig files are no longer RDOCed
* Added :date column support
* BUG: Fixed UTC issues with datetimes
* Added #to_yaml method
* Added #to_xml method
* Added #to_json method
* BUG: Fixed HasManyAssociation::Set#inspect
* BUG: Fixed #reload!
* BUG: Column copy for STI moved into Table#initialize to better handle STI with multiple mapped databases
* BUG: before_create callbacks moved in the execution flow since they weren't guaranteed to fire before
* Threading enhancements: Removed single_threaded_mode, #database block form adjusted for thread-safety
* BUG: Fixed String#blank? when a multi-line string contained a blank line (thanks zapnap!)
* Performance enhancements: (thanks wycats!)

-- 0.2.2
* Removed C extension bundles and log files from package

-- 0.2.3
* Added String#t for translation and overrides for default validation messages
* Give credit where it's due: zapnap, not pimpmaster, submitted the String#blank? patch. My bad. :-(
* Resolve issue with non-unique-hash values and #dirty?; now frozen original values are stored instead